# practica1

./: CMakeLists.txt  README.md
src/: AddWordsWindow.cpp  AddWordsWindow.h  Dictionary.cpp  Dictionary.h  EditFlashcardDialog.cpp  EditFlashcardDialog.h  EditWordsWindow.cpp  EditWordsWindow.h  Flashcard.cpp  Flashcard.h  MainWindow.cpp  MainWindow.h  TrainingWindow.cpp  TrainingWindow.h  main.cpp
